--- a/app/views/requests/error.html.erb
+++ b/app/views/requests/error.html.erb
@@ -1,3 +1,5 @@
-<div>
-Error in response, try again.
+<div class="row">
+  <div class="col-md-12 d-flex justify-content-center">
+    <h1>Error in response from Player 2, please try again.</h1>
   </div>
+</div>
