--- a/app/views/requests/lose.html.erb
+++ b/app/views/requests/lose.html.erb
@@ -1,3 +1,5 @@
-<div>
-You Lose
+<div class="row">
+  <div class="col-md-12 d-flex justify-content-center">
+    <h1>You Lose!</h1>
   </div>
+</div>
