--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,13 +1,7 @@
 <div class="grid-container">
-  <div>
-1st
-  </div>
-  <div>
-    2nd Div
-  </div>
-  <div>
-    3rd div
-  </div>
+  <div></div>
+  <div></div>
+  <div></div>
   <div>
     <%= link_to "Rock", curb_throw_path(:player_throw => "rock"), data: { modal: true } %>
   </div>
@@ -17,13 +11,7 @@
   <div>
     <%= link_to 'Scissors', curb_throw_path(:player_throw => "scissors"), data: { modal: true } %>
   </div>
-  <div>
-    7th Div
-  </div>
-  <div>
-    8th Div
-  </div>
-  <div>
-    9th Div
-  </div>
+  <div></div>
+  <div></div>
+  <div></div>
 </div>
